# trek

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  index.html  readme.md  search-index.js
chrono/: struct.Duration.html
chrono/duration/: struct.Duration.html
examples/: LICENSE  example.rs  migration_index.rs
fallible_iterator/: fn.convert.html  index.html  struct.AndThen.html  struct.Chain.html  struct.Cloned.html  struct.Convert.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.Fuse.html  struct.Iterator.html  struct.Map.html  struct.MapErr.html  struct.Peekable.html  struct.Rev.html  struct.Take.html  struct.Zip.html  trait.DoubleEndedFallibleIterator.html  trait.FallibleIterator.html  trait.FromFallibleIterator.html  trait.IntoFallibleIterator.html
md5/: fn.compute.html  index.html  struct.Context.html  type.Digest.html
phf/: index.html  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
phf_shared/: fn.displace.html  fn.get_index.html  fn.hash.html  fn.split.html  index.html  trait.PhfHash.html
postgres/: enum.TlsMode.html  fn.cancel_query.html  index.html  macro.accepts.html  macro.to_sql_checked.html  struct.CancelData.html  struct.Connection.html  struct.LoggingNoticeHandler.html  trait.GenericConnection.html  trait.HandleNotice.html  type.Result.html
postgres_protocol/: enum.IsNull.html  index.html  type.Oid.html
src/: error.rs  lib.rs  migration.rs  migration_index.rs  migration_version.rs
tests/: env_vars_example.sh  test.rs
trek/: create_migration.v.html  fn.create_migration.html  index.html  sidebar-items.js  type.Result.html
(+283 files in other folders)
