[package]
name = "trek"
version = "0.2.0"
authors = ["Brent Houghton <brent@slixbits.com>"]
description = "Database migration management for Rust programs"
readme = "readme.md"
keywords = ["database", "migration"]
license = "MIT"
repository = "https://github.com/starim/trek"

[[test]]
name = "test"
path = "tests/test.rs"

[[example]]
name = "basic_example"
path = "examples/example.rs"

[dependencies]
chrono = "0.2.16"
postgres = "0.9.6"

[dev-dependencies]
docopt = "0.6.72"
rustc-serialize = "0.3.16"
