[package]
name = "trek"
version = "0.2.1"
authors = ["Brent Houghton <brent@slixbits.com>"]
description = "Database migration management for Rust programs"
readme = "readme.md"
keywords = ["database", "migration"]
license = "LGPL-3.0"
homepage = "https://starim.github.io/trek/trek/index.html"
repository = "https://github.com/starim/trek"
documentation = "https://starim.github.io/trek/trek/index.html"

[[test]]
name = "test"
path = "tests/test.rs"

[[example]]
name = "example"
path = "examples/example.rs"

[dependencies]
chrono = "0.2.16"
postgres = "0.11.0"

[dev-dependencies]
docopt = "0.6.72"
rustc-serialize = "0.3.16"
